--- a/inst/nnrrIndikatorer.Rnw
+++ b/inst/nnrrIndikatorer.Rnw
@@ -39,39 +39,40 @@ library(tidyverse)
 library(lubridate)
 options(dplyr.summarise.inform = FALSE)
 
-rap_aar <- 2023
+rap_aar <- 2024
 
 icd10 <- read.table('~/mydata/nnrr/icd10.csv', sep=';', header=T, stringsAsFactors = F, fileEncoding = 'UTF-8')
 RegData <- nnrr::nnrrHentRegData()
 
 RegDataAll <- RegData
-RegData <- RegData[which(RegData$Aar >= 2018 & RegData$Aar <= rap_aar), ]
-Oppf_data <- RegDataAll[which(RegDataAll$aar_oppfolg>= 2018 & RegDataAll$aar_oppfolg <= rap_aar), ]
+RegData <- RegData[which(RegData$Aar >= 2019 & RegData$Aar <= rap_aar), ]
+Oppf_data <- RegDataAll[which(RegDataAll$aar_oppfolg>= 2019 & RegDataAll$aar_oppfolg <= rap_aar), ]
 Oppf_data$Aar <- Oppf_data$aar_oppfolg
-
-rm(list = c('pasientsvar_pre', 'legeskjema', 'pasientsvar_post', 'pasientsvar_post2'))
 
 kobling_resh_shusnavn <- RegData[match(unique(RegData$UnitId), RegData$UnitId), c("UnitId", "SykehusNavn")]
 
-map_resh_orgnr <- data.frame(orgnr_sh = c(974589095, 974749025,
-                                          974557746, 974795787,
-                                          974795639, 974703300,
-                                          974795477, 974733013,
-                                          974754118, 974747138,
-                                          974631326, 974575396,
-                                          993562718),
-                             resh = c(109834, 104293,
-                                      102959,  601032,
-                                      700735, 4211588,
-                                      102169, 114174,
-                                      105821, 4212982,
-                                      103736, 700138,
-                                      700701))
+map_resh_orgnr <- data.frame(
+  orgnr_sh = c(974589095, 974749025,
+               974557746, 974795787,
+               974795639, 974703300,
+               974795477, 974733013,
+               974754118, 974747138,
+               974631326, 974575396,
+               993562718, 874631752,
+               996328112),
+  resh = c(109834, 104293,
+           102959,  601032,
+           700735, 4211588,
+           102169, 114174,
+           105821, 4212982,
+           103736, 700138,
+           700701, 4216667,
+           701433))
 
 # kobling_resh_shusnavn[kobling_resh_shusnavn$UnitId %in% setdiff(kobling_resh_shusnavn$UnitId, map_resh_orgnr$resh), ] #sykehus som mangler i mapping
 
-format_ut <- ".svg"
-figfolder <- "~/mydata/nnrr/indikatorer_2023/"
+format_ut <- ".pdf"
+figfolder <- "~/mydata/nnrr/indikatorer_2024/"
 if (!dir.exists(figfolder)) {
   dir.create(figfolder)
 }
@@ -590,8 +591,8 @@ print(xtable::xtable(tabell1, digits=c(0,0,0,0,0,1), caption='Andel som mottar m
 outfile <- "mestringsorientert_samtale.pdf"
 outfile <- paste0(figfolder, outfile)
 nnrrFigIndikator(indikator, c('Andel som mottar', 'mestringsorientert samtale'),
-                   minstekrav = 85, maal = 95,
-                   outfile=outfile)
+                 minstekrav = 85, maal = 95,
+                 outfile=outfile)
 if (format_ut != "pdf") {
   outfile <- paste0(substr(outfile, 1, nchar(outfile)-4), format_ut)
   nnrrFigIndikator(indikator, c('Andel som mottar', 'mestringsorientert samtale'),
@@ -639,7 +640,7 @@ dg_ny$ind_id <- "nnrr_dg"
 dg_ny$context <- "caregiver"
 
 dg_gml <- readr::read_csv2("~/mydata/nnrr/nnrr_dg_shusviser_2022.csv",
-                          locale = readr::locale(encoding = "Latin1"))
+                           locale = readr::locale(encoding = "Latin1"))
 
 Indikatorer <- Indikatorer[, c(6,2,3,5,7)]
 names(Indikatorer) <- c("orgnr",	"year",	"var",	"denominator",	"ind_id")
